add javascript functions and calls output

--- a/index.html
+++ b/index.html
@@ -15,25 +15,37 @@
     </div>
 
     <div class="container">
-      <form id="mainform">
+      <form  class="form" id="mainform">
 
         <h3>Pick your favorite things</h3>
         <div class="form-group">
-          <label for="label1"> <em>Thing 1</em></label>
-          <input id="input1" class="form-control" type="text">
+          <label for="label1"> <em></em></label>
+          <input id="input1" class="form-control" type="text" placeholder="Favorite Sound">
         </div>
         <div class="form-group">
-          <label for="label2"> <em>Thing 2</em></label>
-          <input id="input2" class="form-control" type="text">
+          <label for="label2"> <em></em></label>
+          <input id="input2" class="form-control" type="text" placeholder="Favorite Tree">
         </div>
         <div class="form-group">
-          <label for="label3"> <em>Thing 3</em></label>
-          <input id="input3" class="form-control" type="text">
+          <label for="label3"> <em></em></label>
+          <input id="input3" class="form-control" type="text" placeholder="Favorite Smell">
         </div>
+        <div class="form-group">
+          <label for="label4"> <em></em></label>
+          <input id="input4" class="form-control" type="text" placeholder="Favorite Body...of Water">
+        </div>
+        <button type="submit" class="btn" name="button1">This is a button!</button>
 
       </form>
+      <div class="output">
+        <ul>
+          <li>output 1: <span id="out1"></span></li>
+          <li>output 2: <span id="out2"></span></li>
+          <li>output 3: <span id="out3"></span></li>
+          <li>output 4: <span id="out4"></span></li>
+        </ul>
+      </div>
     </div>
-
   </body>
   <footer>
   </footer>
